framec/tests/snapshots/typescript_snapshots__selfcall.snap
---
source: framec/tests/typescript_snapshots.rs
expression: "compile_fixture(\"06_selfcall\", \"typescript\")"
---
class SelfCallFrameEvent {
    public _message: string;
    public _parameters: any[];

    constructor(message: string, parameters: any[]) {
        this._message = message;
        this._parameters = parameters;
    }
}


class SelfCallFrameContext {
    public event: SelfCallFrameEvent;
    public _return: any;
    public _data: Record<string, any>;
    public _transitioned: boolean;

    constructor(event: SelfCallFrameEvent, default_return: any) {
        this.event = event;
        this._return = default_return;
        this._data = {  };
        this._transitioned = false;
    }
}


class SelfCallCompartment {
    public state: string;
    public state_args: any[];
    public state_vars: Record<string, any>;
    public enter_args: any[];
    public exit_args: any[];
    public forward_event: any;
    public parent_compartment: SelfCallCompartment | null;

    constructor(state: string, parent_compartment: SelfCallCompartment | null = null) {
        this.state = state;
        this.state_args = [];
        this.state_vars = {  };
        this.enter_args = [];
        this.exit_args = [];
        this.forward_event = null;
        this.parent_compartment = parent_compartment;
    }

    public copy(): SelfCallCompartment {
        const c = new SelfCallCompartment(this.state, this.parent_compartment);
        c.state_args = {...this.state_args};
        c.state_vars = {...this.state_vars};
        c.enter_args = {...this.enter_args};
        c.exit_args = {...this.exit_args};
        c.forward_event = this.forward_event;
        return c;
    }
}


export class SelfCall {
    private _state_stack: Array<any>;
    private __compartment: SelfCallCompartment;
    private __next_compartment: SelfCallCompartment | null;
    private _context_stack: Array<any>;
    private count: i32 = 0;

    constructor() {
        this._state_stack = [];
        this._context_stack = [];
        this.__compartment = this.__prepareEnter("Active", [], []);
        this.__next_compartment = null;
    }

    _frame_init(): void {
        const __e = new SelfCallFrameEvent("$>", this.__compartment.enter_args);
        const __ctx = new SelfCallFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        this._context_stack.pop();
    }

    static _create(): SelfCall {
        const c = new SelfCall();
        c._frame_init();
        return c;
    }

    static readonly _HSM_CHAIN: Record<string, string[]> = {
        "Active": ["Active"],
    };
    private __prepareEnter(leaf: string, state_args: any[], enter_args: any[]): SelfCallCompartment {
        let comp: SelfCallCompartment | null = null;
        for (const name of SelfCall._HSM_CHAIN[leaf]) {
            const new_comp = new SelfCallCompartment(name);
            new_comp.state_args = [...state_args];
            new_comp.enter_args = [...enter_args];
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    private __prepareExit(exit_args: any[]) {
        let comp: SelfCallCompartment | null = this.__compartment;
        while (comp !== null) {
            comp.exit_args = [...exit_args];
            comp = comp.parent_compartment;
        }
    }

    private __kernel(__e: SelfCallFrameEvent) {
        // Route event to current state.
        this.__router(__e);
        // Drain any transitions queued by the handler.
        while (this.__next_compartment !== null) {
            const next_compartment = this.__next_compartment;
            this.__next_compartment = null;
            // Exit the current (leaf) state.
            const exit_event = new SelfCallFrameEvent("<$", this.__compartment.exit_args);
            this.__router(exit_event);
            // Switch to the new compartment.
            this.__compartment = next_compartment;
            // Three-branch forward-event handling.
            const forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event === null) {
                // No forwarded event — synthesize a fresh $>.
                const enter_event = new SelfCallFrameEvent("$>", this.__compartment.enter_args);
                this.__router(enter_event);
            } else if (forward_event._message === "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                this.__router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                const enter_event = new SelfCallFrameEvent("$>", this.__compartment.enter_args);
                this.__router(enter_event);
                this.__router(forward_event);
            }
            for (const ctx of this._context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private __router(__e: SelfCallFrameEvent) {
        const handler_name = `_state_${this.__compartment.state}`;
        const handler = (this as any)[handler_name];
        if (handler) {
            handler.call(this, __e, this.__compartment);
        }
    }

    private __transition(next_compartment: SelfCallCompartment) {
        this.__next_compartment = next_compartment;
    }

    public kick() {
        const __e = new SelfCallFrameEvent("kick", []);
        const __ctx = new SelfCallFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        this._context_stack.pop();
    }

    public report(): i32 {
        const __e = new SelfCallFrameEvent("report", []);
        const __ctx = new SelfCallFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        return this._context_stack.pop()!._return;
    }

    private _state_Active(__e: SelfCallFrameEvent, compartment: SelfCallCompartment) {
        if (__e._message === "kick") {
            this._s_Active_hdl_user_kick(__e, compartment);
            return;
        }
        if (__e._message === "report") {
            this._s_Active_hdl_user_report(__e, compartment);
            return;
        }
    }

    private _s_Active_hdl_user_kick(__e: SelfCallFrameEvent, compartment: SelfCallCompartment) {
        self.count = self.count + 1
        this.report();
        if (this._context_stack.length > 0 && this._context_stack[this._context_stack.length - 1]._transitioned) return;
    }

    private _s_Active_hdl_user_report(__e: SelfCallFrameEvent, compartment: SelfCallCompartment) {
        this._context_stack[this._context_stack.length - 1]._return = self.count;
    }
}
