framec/tests/snapshots/typescript_snapshots__state_args.snap
---
source: framec/tests/typescript_snapshots.rs
expression: "compile_fixture(\"04_state_args\", \"typescript\")"
---
class StateArgsFrameEvent {
    public _message: string;
    public _parameters: any[];

    constructor(message: string, parameters: any[]) {
        this._message = message;
        this._parameters = parameters;
    }
}


class StateArgsFrameContext {
    public event: StateArgsFrameEvent;
    public _return: any;
    public _data: Record<string, any>;
    public _transitioned: boolean;

    constructor(event: StateArgsFrameEvent, default_return: any) {
        this.event = event;
        this._return = default_return;
        this._data = {  };
        this._transitioned = false;
    }
}


class StateArgsCompartment {
    public state: string;
    public state_args: any[];
    public state_vars: Record<string, any>;
    public enter_args: any[];
    public exit_args: any[];
    public forward_event: any;
    public parent_compartment: StateArgsCompartment | null;

    constructor(state: string, parent_compartment: StateArgsCompartment | null = null) {
        this.state = state;
        this.state_args = [];
        this.state_vars = {  };
        this.enter_args = [];
        this.exit_args = [];
        this.forward_event = null;
        this.parent_compartment = parent_compartment;
    }

    public copy(): StateArgsCompartment {
        const c = new StateArgsCompartment(this.state, this.parent_compartment);
        c.state_args = {...this.state_args};
        c.state_vars = {...this.state_vars};
        c.enter_args = {...this.enter_args};
        c.exit_args = {...this.exit_args};
        c.forward_event = this.forward_event;
        return c;
    }
}


export class StateArgs {
    private _state_stack: Array<any>;
    private __compartment: StateArgsCompartment;
    private __next_compartment: StateArgsCompartment | null;
    private _context_stack: Array<any>;

    constructor() {
        this._state_stack = [];
        this._context_stack = [];
        this.__compartment = this.__prepareEnter("Idle", [], []);
        this.__next_compartment = null;
    }

    _frame_init(): void {
        const __e = new StateArgsFrameEvent("$>", this.__compartment.enter_args);
        const __ctx = new StateArgsFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        this._context_stack.pop();
    }

    static _create(): StateArgs {
        const c = new StateArgs();
        c._frame_init();
        return c;
    }

    static readonly _HSM_CHAIN: Record<string, string[]> = {
        "Idle": ["Idle"],
        "Holding": ["Holding"],
    };
    private __prepareEnter(leaf: string, state_args: any[], enter_args: any[]): StateArgsCompartment {
        let comp: StateArgsCompartment | null = null;
        for (const name of StateArgs._HSM_CHAIN[leaf]) {
            const new_comp = new StateArgsCompartment(name);
            new_comp.state_args = [...state_args];
            new_comp.enter_args = [...enter_args];
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    private __prepareExit(exit_args: any[]) {
        let comp: StateArgsCompartment | null = this.__compartment;
        while (comp !== null) {
            comp.exit_args = [...exit_args];
            comp = comp.parent_compartment;
        }
    }

    private __kernel(__e: StateArgsFrameEvent) {
        // Route event to current state.
        this.__router(__e);
        // Drain any transitions queued by the handler.
        while (this.__next_compartment !== null) {
            const next_compartment = this.__next_compartment;
            this.__next_compartment = null;
            // Exit the current (leaf) state.
            const exit_event = new StateArgsFrameEvent("<$", this.__compartment.exit_args);
            this.__router(exit_event);
            // Switch to the new compartment.
            this.__compartment = next_compartment;
            // Three-branch forward-event handling.
            const forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event === null) {
                // No forwarded event — synthesize a fresh $>.
                const enter_event = new StateArgsFrameEvent("$>", this.__compartment.enter_args);
                this.__router(enter_event);
            } else if (forward_event._message === "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                this.__router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                const enter_event = new StateArgsFrameEvent("$>", this.__compartment.enter_args);
                this.__router(enter_event);
                this.__router(forward_event);
            }
            for (const ctx of this._context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    private __router(__e: StateArgsFrameEvent) {
        const handler_name = `_state_${this.__compartment.state}`;
        const handler = (this as any)[handler_name];
        if (handler) {
            handler.call(this, __e, this.__compartment);
        }
    }

    private __transition(next_compartment: StateArgsCompartment) {
        this.__next_compartment = next_compartment;
    }

    public load(initial: i32) {
        const __e = new StateArgsFrameEvent("load", [initial]);
        const __ctx = new StateArgsFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        this._context_stack.pop();
    }

    public adjust(delta: i32) {
        const __e = new StateArgsFrameEvent("adjust", [delta]);
        const __ctx = new StateArgsFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        this._context_stack.pop();
    }

    public peek(): i32 {
        const __e = new StateArgsFrameEvent("peek", []);
        const __ctx = new StateArgsFrameContext(__e, null);
        this._context_stack.push(__ctx);
        this.__kernel(__e);
        return this._context_stack.pop()!._return;
    }

    private _state_Idle(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        if (__e._message === "load") {
            this._s_Idle_hdl_user_load(__e, compartment);
            return;
        }
    }

    private _state_Holding(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        let value = this.__compartment.state_args[0];
        if (__e._message === "adjust") {
            this._s_Holding_hdl_user_adjust(__e, compartment);
            return;
        }
        if (__e._message === "peek") {
            this._s_Holding_hdl_user_peek(__e, compartment);
            return;
        }
    }

    private _s_Idle_hdl_user_load(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        const initial = __e._parameters[0];
        const __compartment = this.__prepareEnter("Holding", [initial], []);
        this.__transition(__compartment);
        return;
    }

    private _s_Holding_hdl_user_adjust(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        const value = compartment.state_args[0];
        const delta = __e._parameters[0];
        const __compartment = this.__prepareEnter("Holding", [value + delta], []);
        this.__transition(__compartment);
        return;
    }

    private _s_Holding_hdl_user_peek(__e: StateArgsFrameEvent, compartment: StateArgsCompartment) {
        const value = compartment.state_args[0];
        this._context_stack[this._context_stack.length - 1]._return = value;
    }
}
